[package]
name = "MiniAssist"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading"
] }
image = "0.24"
winapi = { version = "0.3.9", features = ["winuser", "winbase"] }
